[tool.poetry]
name = "chickadee"
version = "20210314.1"
description = "Yet another GeoIP enrichment tool."
authors = ["Chapin Bryce <mail@chapinb.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
openpyxl = "^3.0.10"
tqdm = "^4.64.1"
netaddr = "^0.8.0"
python-evtx = "^0.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
